# zotero-bridge-design-package

./: .env.example  .gitignore  AGENT_INTEGRATION.md  ARCHITECTURE.md  CODEX_HANDOFF.md  Dockerfile  MCP_DESIGN.md  OPTIONAL_LOCAL_RELAY.md  README.md  README_IMPLEMENTATION.md  TEST_PLAN.md  UPGRADE_PLAN_VERBATIM.md  openapi.actions.yaml  openapi.full.yaml  pyproject.toml
app/: auth.py  config.py  dependencies.py  errors.py  main.py  mcp_server.py  models.py
app/routes/: attachments.py  discovery.py  health.py  items.py  library.py  notes.py  papers.py
app/services/: attachment_service.py  bridge_service.py  discovery_service.py  doi_resolver.py  fulltext.py  ingest_service.py  library_service.py  local_fulltext_store.py  local_search_index.py  note_renderer.py  note_search_cache.py  notes_service.py  remote_fetch_guard.py  zotero_client.py  zotero_scope_resolver.py
deploy/: Caddyfile.example  docker-compose.8888.yml  nginx.8888.conf
scripts/: smoke_test.sh
skills/zotero-bridge/: SKILL.md
skills/zotero-bridge/references/: setup.md  workflows.md
tests/: conftest.py
tests/integration/: test_api.py  test_contract.py
tests/unit/: test_attachment_service.py  test_doi_resolver.py  test_fulltext.py  test_items_route.py  test_note_renderer.py  test_note_search_cache.py  test_papers_route.py  test_remote_fetch_guard.py  test_zotero_client.py
tools/: upload_pdf.py
